# agg-files

./: Cargo.toml  README.md  build.rs  cli.rs  custom_ignore.rs  file_processor.rs  git_status_handler.rs  github_handler.rs  gitignore_helper.rs  ignore_files_helper.rs  main.rs  pattern_matcher.rs  temp_manager.rs  version.rs
