[package]
name = "agg-files"
version = "0.1.2"
edition = "2021"
authors = ["Seth Horsley <git-public.ch12j@seth4242.com>"]
description = "A command-line tool for aggregating and displaying file contents from local and GitHub repositories"
repository = "https://github.com/sethhorsley/ai-tools"
license = "MIT"

[dependencies]
walkdir = "2.3"
regex = "1.5"
ignore = "0.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.3"
directories = "5.0"
flate2 = "1.0"
tar = "0.4"
chrono = "0.4"

[build-dependencies]
chrono = "0.4"

[[bin]]
name = "agg-files"
path = "main.rs"
